infra/istio-ingress.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: health-istio
  labels:
    - istio-injection: enabled

___
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: healthcheck-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: healthcheck-vs
spec:
  hosts:
  - "*"
  gateways:
  - healthcheck-gateway
  http:
  - match:
    - uri:
        prefix: /actuator/health
    route:
    - destination:
        port:
          number: 8000
        host: actuator-healthcheck-example-svc
